kube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: "Ingress"
metadata:
  name: "secure-azure-waf-ingress"
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    ingressclass.kubernetes.io/is-default-class: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: ""
      http:
        paths:
          - path: /api/country
            pathType: Prefix
            backend:
              service:
                name: country-service
                port:
                  number: 8082
          - path: /api/ip
            pathType: Prefix
            backend:
              service:
                name: ip-service
                port:
                  number: 8084
          - path: /api/v1/stats
            pathType: Prefix
            backend:
              service:
                name: log-service
                port:
                  number: 5000
          - path: /api/v1/logs
            pathType: Prefix
            backend:
              service:
                name: log-service
                port:
                  number: 5000
          - path: /api/v1/ai
            pathType: Prefix
            backend:
              service:
                name: ai-service
                port:
                  number: 5001
          - path: /api/rule
            pathType: Prefix
            backend:
              service:
                name: rule-service
                port:
                  number: 8083
          - path: /api/v1/users
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 8080
          - path: /api/waf
            pathType: Prefix
            backend:
              service:
                name: waf-service
                port:
                  number: 8081
